Updated to 3.9.0 with match fixes and new matches for verse and chapter.
git-svn-id: https://plugins.svn.wordpress.org/esv-plugin/trunk@712185 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/esv.css
+++ b/esv.css
@@ -19,7 +19,7 @@ cite.bibleref {
 }
 
 /* Taken from ESV website, probably shouldn't change anything beyond this */
-h3 {
+.esvblock h3 {
 	text-align: left;
 }
 
@@ -83,7 +83,7 @@ div.block-indent span.verse-num, div.block-indent span.woc  {
 	padding-left: 0;
 }
 
-h4 {
+.esvblock h4 {
 	font-weight: normal;
 }
 
